--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Frexile/Weather_Forecast_Page/issues"
   },
-  "homepage": "https://github.com/Frexile/Weather_Forecast_Page#readme"
+  "homepage": "https://github.com/Frexile/Weather_Forecast_Page#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
